# a-stock-trade

./: .gitignore  AGENTS.md  README.md
apps/intraday-t/: Makefile  README.md  pyproject.toml
apps/intraday-t/scripts/: intraday_aggregator.py  intraday_collector.py  intraday_live.py  intraday_monitor.py  intraday_signal.py  intraday_web.py
apps/intraday-t/src/intraday_t/: __init__.py  aggregate.py  aggregator.py  baidu_ws.py  collector.py  live.py  models.py  monitor.py  resolver.py  signals.py  storage.py  web_app.py  web_runtime.py
apps/intraday-t/tests/: test_aggregate.py  test_baidu_ws.py  test_live.py  test_monitor.py  test_resolver.py  test_signals.py  test_storage.py  test_web_runtime.py
docs/: a-stock-data-sources.md  intraday-t-tool-design.md
docs/plans/: intraday-t-strategy-upgrade.md
docs/specs/: intraday-t-strategy-upgrade.md  intraday-t-web-ui.md
docs/strategies/: 焚诀-止跌放量突破.md
libs/: __init__.py
libs/stock_data/: __init__.py  backtest.py  collector.py  daily_screen.py  paths.py  providers.py  reversal.py  schemas.py  screener.py  store.py  universe.py
output/: ai-pc_industry_chain.html  ai-pc_industry_chain_v2.html  ai_pc_industry_chain.html  glass_substrate_industry_chain.html  industry_chain_prompt_full.md  large_transformer_industry_chain.html  mlcc_industry_chain.html  sst_inverter_export_industry_chain.html
tests/: test_daily_screen.py  test_reversal.py  test_stock_data.py  test_stock_screener_backtest.py  test_universe.py
