[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intraday-t"
version = "0.1.0"
description = "A 股实时做 T 辅助工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "streamlit>=1.58",
]

[project.scripts]
intraday-collector = "intraday_t.collector:main"
intraday-aggregator = "intraday_t.aggregator:main"
intraday-signal = "intraday_t.signals:main"
intraday-monitor = "intraday_t.monitor:main"
intraday-live = "intraday_t.live:main"
intraday-web = "intraday_t.web_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
